Prepare PyLearn 0.1.0b1 release

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,12 @@
 [metadata]
-name = pylearnlite
-version = 0.1.0
-author = Your Name
-author_email = your.email@example.com
+name = PyLearn
+version = 0.1.0b1
+author = Vicente Ramos
+author_email = vicente.ramos@ucdenver.edu
 description = A pure-Python machine learning and deep learning framework with no external dependencies.
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/yourusername/pylearnlite
+url = https://github.com/ramosv/PyLearn
 license = MIT
 classifiers =
     Development Status :: 3 - Alpha
