--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,12 @@
 [metadata]
-name = PyLearn
-version = 0.1.0b1
+name = PyLearn-AI
+version = 0.1.0b2
 author = Vicente Ramos
 author_email = vicente.ramos@ucdenver.edu
 description = A pure-Python machine learning and deep learning framework with no external dependencies.
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/ramosv/PyLearn
+url = https://github.com/ramosv/PyLearn-AI
 license = MIT
 classifiers =
     Development Status :: 3 - Alpha
